fixed image spacing issue in about section

--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -97,12 +97,13 @@
 	flex-direction: row;
 	justify-content: flex-end;
 	width: 100%;
+	ul {
+		padding: 0;
+	}
 }
 .about-img-container {
 	padding: 0;
-	li {
-		margin: 35px 0;
-	}
+	margin: 35px 0;
 }
 
 .about-text-container {
@@ -120,7 +121,7 @@
 		text-decoration: underline;
 	}
 	p:nth-of-type(1) {
-		margin: 75px 0 0 0;
+		margin: 60px 0 0 0;
 	}
 	p:nth-of-type(2),
 	p:nth-of-type(3) {
