--- a/styles/styles.css
+++ b/styles/styles.css
@@ -617,25 +617,16 @@ ul {
 /* The Modal (background) */
 .modal {
   display: none;
-  /* Hidden by default */
   position: fixed;
-  /* Stay in place */
   z-index: 50;
-  /* Sit on top */
   left: 0;
   top: 0;
   width: 100%;
-  /* Full width */
   height: 100%;
-  /* Full height */
   overflow: auto;
-  /* Enable scroll if needed */
   background-color: rgb(0, 0, 0);
-  /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
   -webkit-animation-name: fadeIn;
-  /* Fade in the background */
   -webkit-animation-duration: 0.4s;
   animation-name: fadeIn;
   animation-duration: 0.4s;
@@ -980,11 +971,12 @@ ul {
           justify-content: flex-end;
   width: 100%;
 }
+.about-inner-container ul {
+  padding: 0;
+}
 
 .about-img-container {
   padding: 0;
-}
-.about-img-container li {
   margin: 35px 0;
 }
 
@@ -1004,7 +996,7 @@ ul {
   text-decoration: underline;
 }
 .about-text-container p:nth-of-type(1) {
-  margin: 75px 0 0 0;
+  margin: 60px 0 0 0;
 }
 .about-text-container p:nth-of-type(2),
 .about-text-container p:nth-of-type(3) {
